# Mail_Master

./: .flake8  manage.py  pyproject.toml
Mail_Master/: asgi.py  settings.py  urls.py  wsgi.py
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mailing/management/commands/: send_newsletter.py
mailing/migrations/: 0001_initial.py  0002_newsletter_start_date_newsletter_subject.py  0003_rename_message_newsletter_messages.py  0004_client_owner_message_owner_newsletter_owner.py  0005_alter_client_options_alter_newsletter_options.py  0006_alter_client_options_alter_message_options_and_more.py
mailing/templates/: base.html
mailing/templates/mailing/: all_messages.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  client_message_list.html  delivery_attempts_list.html  home.html  message_delete.html  message_edit.html  message_form.html  message_list.html  navbar.html  newsletter_delete.html  newsletter_detail.html  newsletter_form.html  newsletter_list.html
users/: models.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options_remove_customuser_username_and_more.py  0003_alter_customuser_options.py
